tests/ui/call_skipped_setter_of_default.stderr
error[E0599]: no method named `set_later_def` found for struct `MyStructBuilder` in the current scope
  --> tests/ui/call_skipped_setter_of_default.rs:12:33
   |
1  | #[derive(tidy_builder::Builder)]
   |          --------------------- method `set_later_def` not found for this
...
12 |     let _ = MyStruct::builder().set_later_def();
   |                                 ^^^^^^^^^^^^^-- help: remove the arguments
   |                                 |
   |                                 field, not a method
